# cannon-dfswp

./: AUTHORS  CMakeLists.txt  LICENSE  readme.md
apps/: CMakeLists.txt
apps/Cannon/: CMakeLists.txt  cannonTP.h  cannonTP_test.cpp  matrix.h  mmCannonTime.sh
apps/Cannon-dfswp/: CMakeLists.txt  cannonTP.h  cannonTP_test.cpp  matrixMultiplyPower.sh  mmCannonTime.sh
apps/MKLMxM/: CMakeLists.txt  mkl_test  mkl_test.cpp  readme  runMKL.sh  test
apps/MatrixMultiply/: CMakeLists.txt  matrix.h
cmake/Modules/: FindHwloc.cmake
include/abstractmachine/: Affinity.h  Unit.h
include/scheduler/: MSchedPolicy.h  MicroScheduler.h  Scheduler.h  TPSchedPolicy.h  TPScheduler.h
include/threading/: Codelet.h
src/abstractmachine/: AbstractMachine.cpp  Affinity.cpp
src/common/: Thread.cpp
src/runtime/: CMakeLists.txt
src/scheduler/: MSchedPolicy.cpp  TPSchedPolicy.cpp
src/threading/: Codelet.cpp
